--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start-local-env": "npm run setup && npx supabase start && npx prisma db push",
     "lint": "eslint .",
     "format": "eslint . --fix",
-    "build": "npm ci && npx prisma generate && npx prisma db push && tsc",
+    "build": "npm ci && npx prisma db push && tsc",
     "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
