--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.8",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
@@ -32,6 +33,7 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "express": "^4.19.2",
-    "supabase": "^1.165.0"
+    "supabase": "^1.165.0",
+    "swagger-ui-express": "^5.0.0"
   }
 }
