--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "ts-node src/app.ts",
+    "dev": "node swagger.js && ts-node src/app.ts",
     "setup": "cp envs/local.env .env && npm i && npx prisma generate",
     "start-local-env": "npm run setup && npx supabase start && npx prisma db push",
-    "lint": "eslint .",
-    "format": "eslint . --fix",
-    "build": "npm ci && npx prisma db push && tsc",
+    "lint": "eslint . --fix",
+    "build": "npm ci && npx prisma db push && node swagger.js && tsc",
     "start": "node dist/src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -34,6 +33,7 @@
     "@prisma/client": "^5.13.0",
     "express": "^4.19.2",
     "supabase": "^1.165.0",
+    "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
   }
 }
