--- a/envs/local.env
+++ b/envs/local.env
@@ -7,3 +7,5 @@
 DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:54322/postgres"
 
 DIRECT_URL="postgresql://postgres:postgres@127.0.0.1:54322/postgres"
+
+JWT_SECRET="secret"
