--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.8",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
@@ -32,6 +33,7 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "supabase": "^1.165.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
